--- a/src/main/resources/templates/postAdd.html
+++ b/src/main/resources/templates/postAdd.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width"/>
-    <title>Cadastro de Posts</title>
+    <title>List Posts</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"></link>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div class="panel panel-default">
     <div class="panel-heading">
-        <strong>Cadastro de Posts</strong>
+        <strong>List Posts</strong>
     </div>
     <div class="panel-body">
         <form class="form-horizontal" th:object="${post}" th:action="@{/save}" method="POST" style="margin: 10px">
